# SecurityNews

./: .gitignore  README.md  pyproject.toml
.github/workflows/: conf_release.yml  gen_newspaper.yml  update.yml  weekly_release.yml
bignews/: generate_newspaper.py  generate_pdf.py  update.py
bignews/prompt/: newspaper.html.j2
data/articles/: 2026-03-07.jsonl
data/newspapers/: 2026-03-07.json
secnews/: generate_newspaper.py  generate_pdf.py  update.py  util.py
secnews/bignews/: generate_newspaper.py
secnews/bignews/prompt/: bleepingcomputer.j2  sys.j2
secnews/data/articles/: 2026-03-07.jsonl  2026-03-08.jsonl  2026-03-09.jsonl  2026-03-10.jsonl  2026-03-11.jsonl  2026-03-12.jsonl  2026-03-13.jsonl  2026-03-14.jsonl  2026-03-15.jsonl  2026-03-16.jsonl  2026-03-17.jsonl  2026-03-18.jsonl  2026-03-19.jsonl  2026-03-20.jsonl  2026-03-21.jsonl  2026-03-22.jsonl  2026-03-23.jsonl  2026-03-24.jsonl  2026-03-25.jsonl  2026-03-26.jsonl  2026-03-27.jsonl  2026-03-28.jsonl  2026-03-29.jsonl  2026-03-30.jsonl  2026-03-31.jsonl  2026-04-01.jsonl  2026-04-02.jsonl  2026-04-03.jsonl  2026-04-04.jsonl  2026-04-05.jsonl  2026-04-06.jsonl  2026-04-07.jsonl  2026-04-08.jsonl  2026-04-09.jsonl  2026-04-10.jsonl  2026-04-11.jsonl  2026-04-12.jsonl  2026-04-13.jsonl  2026-04-14.jsonl  2026-04-15.jsonl  (+100 more)
secnews/data/newspapers/: 2026-03-07.json  2026-03-08.json  2026-03-09.json  2026-03-10.json
secnews/prompt/: arxiv.j2  newspaper.html.j2
top-conf/: generate_conf_report.py  generate_conf_summary.py
top-conf/prompt/: conf_report.html.j2  conf_sys.j2
(+6 files in other folders)
